syntax = "proto3";

package envoy.config.cluster.aggregate;

option java_outer_classname = "AggregateClusterProto";
option java_multiple_files = true;
option java_package = "io.envoyproxy.envoy.config.cluster.aggregate";
option go_package = "v2";

import "google/protobuf/wrappers.proto";

import "validate/validate.proto";

// Configuration for the aggregate cluster.
message ClusterConfig {
  // Load balancing clusters in aggregated cluster.
  repeated string clusters = 1 [(validate.rules).repeated .min_items = 2];
}
